# IB-Research-System-v2

./: .gitignore  .railwayignore  PROMPTS_AND_METRICS.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  SETUP_COMPLETE.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml  ideas.yaml  prompts.yaml
config/ib/: chemistry_topics.yaml  physics_topics.yaml  rq_formats.yaml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  FRONTEND.md  README.md
src/agents/: base.py  ideation.py  llm_utils.py  parsing.ipynb  prompts.py  retrieval.py  review.py  structured_review.py
src/mcts/: model.ipynb  node.py  tree.py
src/models/: llm.py
src/retrieval_api/: requirements.txt  sample.py
src/retrieval_api/run_configs/: default.json
src/retrieval_api/scholarqa/: __init__.py  scholar_qa.py  utils.py
src/retrieval_api/scholarqa/llms/: cost_tracker.py  litellm_helper.py  prompts.py
src/retrieval_api/scholarqa/rag/: multi_step_qa_pipeline.py
src/retrieval_api/scholarqa/rag/reranker/: modal_engine.py
src/retrieval_api/scholarqa/trace/: trace_writer.py
src/utils/: ib_config.py  key_manager.py  paper_processing.py  pdf_reading.ipynb
static/css/: review-styles.css  styles.css
static/js/: app.js  debug-tools.js  mcts_auto.js  retrieval.js  review-helpers.js  review-integration.js  review-ui.js  secure-keys.js  wizard.js
static/js/utils/: formatters.js
templates/: index.html  review-panel.html
