[project]
name = "iris-interactive-research-ideation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai2-scholar-qa[all]>=0.5.8",
    "anyascii>=0.3.2",
    "pymupdf>=1.26.0",
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "frontend>=0.0.3",
    "langsmith>=0.3.32",
    "loguru>=0.7.3",
    "openai>=1.0.0",
    "retry>=0.9.2",
    "tools>=0.1.9",
]
